implementing CRUD using promises

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "my-project",
   "version": "1.0.0",
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "babel-node server.js"
+    "start": "node server.js"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
