--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
     "express": "^4.13.3",
+    "lodash": "^3.10.1",
     "mongoose": "^4.3.4",
     "webpack": "^1.12.9"
   }
