--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "my-project",
   "version": "1.0.0",
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "babel-node server.js"
+    "async": "babel-node async-await/server.js",
+    "callbacks": "node callbacks/server.js",
+    "promises": "node promises/server.js"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
